package ua.ithillel.travelapp.model.entity;

import jakarta.persistence.*;
import lombok.Data;

@Entity(name = "like")
@Table(name = "t_like")
@Data
public class Like {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.EAGER)
    @JoinColumn(name = "user_id")
    private User user;

    @ManyToOne
    @JoinColumn(name = "entry_id", nullable = false)
    private TravelEntry travelEntry;
}
